Make sure captions has left/right padding so the long caption text doesn't butt against the side of the screen on mobile.

--- a/resources/scss/elements/_media.scss
+++ b/resources/scss/elements/_media.scss
@@ -3,6 +3,7 @@ figcaption {
 	// components/_text-secondary.scss
 	text-align: center;
 	margin-top: $spacing-fourth;
+	padding:    0 $spacing-global;
 }
 
 // Images.
